# xacro-pure

./: .git-blame-ignore-revs  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: bridge.rs  dom.rs  error.rs  eval.rs  eval_text.rs  includes.rs  lib.rs  literal.rs  load_yaml.rs  macros.rs  math_builtins.rs  namespace.rs  serialize.rs  substitution_args.rs  table.rs  value.rs  xacro_builtins.rs
tests/: eval.rs  includes.rs  literal.rs  macros.rs  openarm.rs  oracle.rs  pipeline.rs  properties.rs  soarm.rs
tests/common/: mod.rs
